feat:style重构,引入vxe-table,unocss

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>eu-vue3</title>
 
     <style>
       /* 深色模式 */
       @media (prefers-color-scheme: dark) {
         #loading-wrapper {
-          background: #191E32 !important;
+          background: #272e3b !important;
         }
         .loading-text {
-          color: #8F9BB3 !important;
+          color: #8f9bb3 !important;
         }
       }
       #loading-wrapper {
@@ -23,7 +23,7 @@
         width: 100%;
         height: 100%;
         z-index: 99999;
-        background: #f7f8fa;
+        background: #f2f3f5;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -47,7 +47,7 @@
 
       #loading-wrapper .loading:after,
       #loading-wrapper .loading:before {
-        content: "";
+        content: '';
         position: absolute;
         left: 0;
         right: 0;
